Add contacts information
